# dodo

./: .gitignore  .gitmodules  .replit  01-helloworld.forth  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md  replit.nix
c_examples/: CMakeLists.txt  recursive_fibonacci.c  tail_call_fibonacci.c  tail_recursive_fibonacci.c
dsrc/: core.dodo  factorial.dodo  fib.dodo  fib2.dodo  fib3.dodo  if-fib.dodo  spp-elem-01.dodo  spp-elem-02.dodo  ttester.fs
src/: SLOTH.md  arena.h  arithmetic.h  arithmetic_tests.c  arr.c  arr.h  arr2.c  bit.h  bit_tests.c  boot.dodo  comparison.h  comparison_tests.c  core.c  core.h  core2.c  core2.h  core_tests.c  ctests.c  dodo.c  dodo.h  dodo.h.backup  dodo_dbg.h  error.h  error_tests.c  inner.h  lists.h  lists_tests.c  pairs.h  pairs_tests.c  simp.h  simp_tests.c  sloth.h  stack.h  stack_tests.c  tests.c  typed.c  typed.h  typed_tests.c  types.h  vm.c  (+3 more)
